	* net/uip/uip_tcpinput.c:  Correct an error in the TCP stack.  It was
	  incrementing the received sequence number BEFORE determining if the
	  incoming data could be handled.  If the data was dropped (usually because
	  there is insufficient buffering space), then no ACK will be sent and the
	  sequence number will be wrong.  The end consequence of the bad sequence
	  number was that the when the dropped packet was re-transmitted, it was
	  was ignored because its sequence number looked wrong.  Fix was, obviously,
	  to only increment the recevied sequence number if the TCP data was
	  accepted.
	* configs/stm3240g-eval, configs/stm32f40discovery, and arch/*/src/Makefile:
	  Add changes to support building with the Atollic "Lite" toolchain.
	* fs/fs_select.c:  Correct select(), in the case of loss of network
	  connection (POLLHUP), select() must report a read-ready event.  This
	  is how the standard select() interface is supposed to work:  In the case
	  of loss-of-connection, select() reports read-ready.  The next time you
	  read from the socket, you detect the end-of-connection event.  Change
	  submitted by Max Nekludov.
	* arch/arm/src/armv7-m/up_fpu.S and arch/arm/src/stm32/stm32_vectors.S:  Fix
	  lazy FPU register saving with CONFIG_ARCH_FPU is set in the configuration.
	* arch/arm/src/armv7-m:  Lazy saving of floating point registers on context
	  switches now seems to be functional.
	* net/uip/uip_tcpinput.c:  Fix a TCP protocol error reported by Max Nekludov.
	* configs/stm3240g-eval, configs/stm32f40discovery:  Add changes to support
	  building with the Atollic "Pro" toolchain.
	* Makefile:  Use the more common .hex extension for Intel hex files instead of
	  more precise .ihx extension.  This change has ripple effects to many build-
	  related scripts and programs and could cause some short-term problems.
	* configs/stm3240g-eval/, arch/arm/src/stm32/up_allocateheap.c:  Add support
	  for the 16-mbit SRAM on-board the STM3240G-EVAL board.