@@ -2516,3 +2516,6 @@
 	  related scripts and programs and could cause some short-term problems.
 	* configs/stm3240g-eval/, arch/arm/src/stm32/up_allocateheap.c:  Add support
 	  for the 16-mbit SRAM on-board the STM3240G-EVAL board.
+	* drivers/usbdev/cdcacm.c and include/nuttx/usbdev/cdcacm.h:  The CDC/ACM
+	  driver can now be dynamically connected and disconnected from the host
+	  under software control.
